crates/carta/tests/snapshots/golden_writer__man__common__nested-emphasis.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.PP
\f[I]emph with \f[BI]strong\f[I] inside\f[R] end
