crates/carta/tests/snapshots/golden_writer__man__common__ordered-default-style.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.IP "1." 3
one
.IP "2." 3
two
