crates/carta/tests/snapshots/golden_writer__man__common__ordered-example.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.IP "(1)" 4
first
.IP "(2)" 4
second
