crates/carta/tests/snapshots/golden_writer__man__common__ordered-lower-alpha.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.IP "a." 3
one
.IP "b." 3
two
