crates/carta/tests/snapshots/golden_writer__man__common__ordered-lower-roman.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.IP " i." 4
one
.IP "ii." 4
two
