crates/carta/tests/snapshots/golden_writer__man__common__ordered-nested.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.IP "1." 3
outer
.RS 4
.IP "1." 3
inner one
.IP "2." 3
inner two
.RE
