crates/carta/tests/snapshots/golden_writer__man__common__ordered-start.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.IP "5." 3
five
.IP "6." 3
six
