crates/carta/tests/snapshots/golden_writer__man__common__ordered-two-parens.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.IP "(1)" 4
one
.IP "(2)" 4
two
