crates/carta/tests/snapshots/golden_writer__man__common__paragraph.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.PP
a simple paragraph with words
