crates/carta/tests/snapshots/golden_writer__man__common__quoted-smart.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.PP
She said \(lqhello\(rq and `hi'.
